--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "indi.yume.tools.fragmentmanager"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
