--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
     debugCompile 'com.facebook.stetho:stetho:1.3.0'
     compile project(':app')
