--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SingleTagActivity">
-        </activity>
+        <activity android:name=".SingleTagActivity"
+            android:theme="@style/AppTheme.NoActionBar.SwipeBack"/>
     </application>
 
 </manifest>
