--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,15 @@ buildscript {
 
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'android-apt'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 15
@@ -30,10 +28,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
 }
 
 dependencies {
@@ -41,8 +35,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.0'
 
-    compile 'io.reactivex:rxjava:1.2.4'
+    compile 'io.reactivex:rxjava:1.2.7'
 
-    apt "org.projectlombok:lombok:1.16.10"
-    provided "org.projectlombok:lombok:1.16.10"
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    apt "org.projectlombok:lombok:1.16.16"
+    provided "org.projectlombok:lombok:1.16.16"
 }
